airflow_stock/logs/dag_id=stock_pipeline/run_id=scheduled__2024-05-20T000000+0000/task_id=create_table/attempt=2.log
[2024-05-21T03:13:06.711+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: stock_pipeline.create_table scheduled__2024-05-20T00:00:00+00:00 [queued]>
[2024-05-21T03:13:06.752+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: stock_pipeline.create_table scheduled__2024-05-20T00:00:00+00:00 [queued]>
[2024-05-21T03:13:06.753+0000] {taskinstance.py:2193} INFO - Starting attempt 2 of 2
[2024-05-21T03:13:06.782+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_table> on 2024-05-20 00:00:00+00:00
[2024-05-21T03:13:06.794+0000] {standard_task_runner.py:60} INFO - Started process 109 to run task
[2024-05-21T03:13:06.800+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'stock_pipeline', 'create_table', 'scheduled__2024-05-20T00:00:00+00:00', '--job-id', '451', '--raw', '--subdir', 'DAGS_FOLDER/stock_pipeline.py', '--cfg-path', '/tmp/tmpy_rzyee6']
[2024-05-21T03:13:06.803+0000] {standard_task_runner.py:88} INFO - Job 451: Subtask create_table
[2024-05-21T03:13:06.937+0000] {task_command.py:423} INFO - Running <TaskInstance: stock_pipeline.create_table scheduled__2024-05-20T00:00:00+00:00 [running]> on host 4ceaa523915d
[2024-05-21T03:13:07.122+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='stocks' AIRFLOW_CTX_DAG_ID='stock_pipeline' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-05-20T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-05-20T00:00:00+00:00'
[2024-05-21T03:13:07.126+0000] {sql.py:276} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS stock(
            code VARCHAR(5) PRIMARY KEY,
            reference_price FLOAT(2),
            celling_price FLOAT(2),
            floor_price FLOAT(2),
            price FLOAT(2),
            volume FLOAT(2),
            total_volume FLOAT(2),
            total_value BIGINT,
            highest_price FLOAT(2),
            lowest_price FLOAT(2),
            average_price FLOAT(2),
            created_time timestamp [ (6) ] with time zone
            );
          
[2024-05-21T03:13:07.161+0000] {base.py:83} INFO - Using connection ID 'postgres_demo' for task execution.
[2024-05-21T03:13:07.211+0000] {base.py:83} INFO - Using connection ID 'postgres_demo' for task execution.
[2024-05-21T03:13:07.526+0000] {sql.py:457} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS stock(
            code VARCHAR(5) PRIMARY KEY,
            reference_price FLOAT(2),
            celling_price FLOAT(2),
            floor_price FLOAT(2),
            price FLOAT(2),
            volume FLOAT(2),
            total_volume FLOAT(2),
            total_value BIGINT,
            highest_price FLOAT(2),
            lowest_price FLOAT(2),
            average_price FLOAT(2),
            created_time timestamp [ (6) ] with time zone
            );
          , parameters: None
[2024-05-21T03:13:07.556+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 14:             created_time timestamp [ (6) ] with time zone
                                              ^

[2024-05-21T03:13:07.633+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=stock_pipeline, task_id=create_table, execution_date=20240520T000000, start_date=20240521T031306, end_date=20240521T031307
[2024-05-21T03:13:07.656+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 451 for task create_table (syntax error at or near "("
LINE 14:             created_time timestamp [ (6) ] with time zone
                                              ^
; 109)
[2024-05-21T03:13:07.705+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-05-21T03:13:07.723+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.11/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-05-21T03:13:07.748+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
